@@ -2,14 +2,17 @@ import java.io.IOException;
 import java.net.URI;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 
-class FileLibrary {
-    FileLibrary() { }
-    List<Path> getFiles(Path start) throws IOException {
+class FileHelpers {
+    static List<Path> getFiles(Path start) throws IOException {
         List<Path> paths = Files.walk(start).filter(p -> !Files.isDirectory(p)).toList();
         return paths;
+    }
+    static String readFile(Path p) throws IOException {
+        return new String(Files.readAllBytes(p));
     }
 }
 
@@ -21,7 +24,7 @@ class Handler implements URLHandler {
 
     public String handleRequest(URI url) throws IOException {
         long start = System.currentTimeMillis();
-        List<Path> paths = new FileLibrary().getFiles(Path.of("./technical"));
+        List<Path> paths = FileHelpers.getFiles(Paths.get("./technical"));
         if (url.getPath().equals("/")) {
             return String.format("There are %d total files to search.", paths.size());
         } else if (url.getPath().equals("/search")) {
